<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_cap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:fontFamily="sans-serif"
        android:text="@string/app_caps"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_cap"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/inp_weight"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:ems="10"
        android:hint="@string/inp_weight"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/design_default_color_primary_dark"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/cap_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_cap"
        android:layout_marginStart="10dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="23dp"
        android:layout_toEndOf="@id/weight"
        android:text="@string/cap_weight"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="15sp"
         />

    <EditText
        android:id="@+id/price"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/inp_price"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:textColorHint="@color/design_default_color_primary_dark"
        android:ems="10"
        android:hint="@string/inp_price"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cap_price"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="23dp"
        android:layout_toEndOf="@id/price"
        android:text="@string/cap_price"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
      />

    <TextView
        android:id="@+id/cap_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:text="@string/cap_result"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/result_info"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_marginStart="26dp"
        android:layout_marginTop="52dp"
        android:layout_toEndOf="@+id/cap_result"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_info"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50sp"
        android:text="@string/btn_text"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_reset"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_info"
        android:layout_toEndOf="@id/button"
        android:layout_marginTop="50sp"
        android:text="@string/btn_reset"
        android:textSize="20sp"
        android:layout_marginStart="30sp" />

</RelativeLayout>